; ModuleID = '/home/carl/AnghaBench/reactos/modules/rostests/winetests/advapi32/extr_registry.c_get_key_value.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rostests/winetests/advapi32/extr_registry.c_get_key_value.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@KEY_ALL_ACCESS = common dso_local global i64 0, align 8
@ERROR_FILE_NOT_FOUND = common dso_local global i64 0, align 8
@ERROR_SUCCESS = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [33 x i8] c"%08x: RegCreateKeyEx failed: %u\0A\00", align 1
@.str.1 = private unnamed_addr constant [6 x i8] c"value\00", align 1
@.str.2 = private unnamed_addr constant [34 x i8] c"%08x: RegQueryValueEx failed: %u\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i32, i8*, i64)* @get_key_value to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @get_key_value(i32 %0, i8* %1, i64 %2) #0 {
  %4 = alloca i64, align 8
  %5 = alloca i32, align 4
  %6 = alloca i8*, align 8
  %7 = alloca i64, align 8
  %8 = alloca i32, align 4
  %9 = alloca i64, align 8
  %10 = alloca i64, align 8
  %11 = alloca i64, align 8
  %12 = alloca i64, align 8
  store i32 %0, i32* %5, align 4
  store i8* %1, i8** %6, align 8
  store i64 %2, i64* %7, align 8
  store i64 8, i64* %12, align 8
  %13 = load i32, i32* %5, align 4
  %14 = load i8*, i8** %6, align 8
  %15 = load i64, i64* %7, align 8
  %16 = load i64, i64* @KEY_ALL_ACCESS, align 8
  %17 = or i64 %15, %16
  %18 = call i64 @RegCreateKeyExA(i32 %13, i8* %14, i32 0, i32* null, i32 0, i64 %17, i32* null, i32* %8, i32* null)
  store i64 %18, i64* %9, align 8
  %19 = load i64, i64* %9, align 8
  %20 = load i64, i64* @ERROR_FILE_NOT_FOUND, align 8
  %21 = icmp eq i64 %19, %20
  br i1 %21, label %22, label %23

22:                                               ; preds = %3
  store i64 0, i64* %4, align 8
  br label %50

23:                                               ; preds = %3
  %24 = load i64, i64* %9, align 8
  %25 = load i64, i64* @ERROR_SUCCESS, align 8
  %26 = icmp eq i64 %24, %25
  %27 = zext i1 %26 to i32
  %28 = load i64, i64* %7, align 8
  %29 = load i64, i64* %9, align 8
  %30 = call i32 @ok(i32 %27, i8* getelementptr inbounds ([33 x i8], [33 x i8]* @.str, i64 0, i64 0), i64 %28, i64 %29)
  %31 = load i32, i32* %8, align 4
  %32 = bitcast i64* %11 to i32*
  %33 = call i64 @RegQueryValueExA(i32 %31, i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.1, i64 0, i64 0), i32* null, i64* %10, i32* %32, i64* %12)
  store i64 %33, i64* %9, align 8
  %34 = load i64, i64* %9, align 8
  %35 = load i64, i64* @ERROR_FILE_NOT_FOUND, align 8
  %36 = icmp eq i64 %34, %35
  br i1 %36, label %37, label %38

37:                                               ; preds = %23
  store i64 0, i64* %11, align 8
  br label %46

38:                                               ; preds = %23
  %39 = load i64, i64* %9, align 8
  %40 = load i64, i64* @ERROR_SUCCESS, align 8
  %41 = icmp eq i64 %39, %40
  %42 = zext i1 %41 to i32
  %43 = load i64, i64* %7, align 8
  %44 = load i64, i64* %9, align 8
  %45 = call i32 @ok(i32 %42, i8* getelementptr inbounds ([34 x i8], [34 x i8]* @.str.2, i64 0, i64 0), i64 %43, i64 %44)
  br label %46

46:                                               ; preds = %38, %37
  %47 = load i32, i32* %8, align 4
  %48 = call i32 @RegCloseKey(i32 %47)
  %49 = load i64, i64* %11, align 8
  store i64 %49, i64* %4, align 8
  br label %50

50:                                               ; preds = %46, %22
  %51 = load i64, i64* %4, align 8
  ret i64 %51
}

declare dso_local i64 @RegCreateKeyExA(i32, i8*, i32, i32*, i32, i64, i32*, i32*, i32*) #1

declare dso_local i32 @ok(i32, i8*, i64, i64) #1

declare dso_local i64 @RegQueryValueExA(i32, i8*, i32*, i64*, i32*, i64*) #1

declare dso_local i32 @RegCloseKey(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
